feat: Update Tailwind CSS config
Refactors the `colors` object in the Tailwind CSS configuration to correctly define `secondary` color. This ensures consistent styling across the application.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             },
             colors: {
               primary: '#1a1a1a',
-              secondary: '#666666',
+              seconda
             }
           },
         },
